--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 POST=5000
 DB_USER="root"
-DB_PASS="Vansh@221131"
-DB_HOST="localhost"
-DB_NAME="CRM"
+# DB_PASS="Vansh@221131"
+# DB_HOST="localhost"
+# DB_NAME="CRM"
+DB_PASS="TrzSMHAdRsvgmwWBtMsGpRfutVeyCxql"
+DB_HOST="mysql.railway.internal"
+DB_NAME="crm"
+DB_PORT=51036
