--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_USER="root"
 # DB_HOST="localhost"
 # DB_NAME="CRM"
 DB_PASS="TrzSMHAdRsvgmwWBtMsGpRfutVeyCxql"
-DB_HOST="mysql.railway.internal"
+DB_HOST="hopper.proxy.rlwy.net"
 DB_NAME="crm"
 DB_PORT=51036
